Empty default affinity

--- a/charts/redirect/values.yaml
+++ b/charts/redirect/values.yaml
@@ -67,15 +67,4 @@ nodeSelector: {}
 
 tolerations: []
 
-affinity:
-  podAntiAffinity:
-    preferredDuringSchedulingIgnoredDuringExecution:
-    - weight: 100
-      podAffinityTerm:
-        labelSelector:
-          matchExpressions:
-            - key: app
-              operator: In
-              values:
-                - redirect
-        topologyKey: "kubernetes.io/hostname"
+affinity: {}
