--- a/charts/redirect/templates/pod-disruption-budget.yaml
+++ b/charts/redirect/templates/pod-disruption-budget.yaml
@@ -1,3 +1,4 @@
+{{- if gt (.Values.replicaCount | int) 1 -}}
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
@@ -8,3 +9,4 @@ spec:
     matchLabels:
       app: {{ include ".helm.fullname" . }}
       release: {{ include ".helm.fullname" . }}
+{{ end }}
