--- a/charts/redirect/templates/service.yaml
+++ b/charts/redirect/templates/service.yaml
@@ -7,12 +7,12 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+    - port: 7132
+      targetPort: 7132
       protocol: TCP
       name: http
-    - port: {{ .Values.service.metricsPort }}
-      targetPort: {{ .Values.service.metricsPort }}
+    - port: 7133
+      targetPort: 7133
       protocol: TCP
       name: http-metrics
   selector:
