--- a/charts/redirect/templates/tests/test-metrics-connection.yaml
+++ b/charts/redirect/templates/tests/test-metrics-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include ".helm.fullname" . }}:{{ .Values.service.metricsPort }}']
+      args:  ['{{ include ".helm.fullname" . }}:7133']
   restartPolicy: Never
