--- a/charts/redirect/values.yaml
+++ b/charts/redirect/values.yaml
@@ -14,6 +14,9 @@ redirect:
   ingressHosts:
     - www.wyrihaximus.net
 
+grafana:
+  influxdb: false
+
 replicaCount: 2
 
 # Available tags: https://github.com/wyrihaximusnet/docker-redirect#provided-tags
@@ -45,8 +48,6 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 7132
-  metricsPort: 7133
 
 ingress:
   annotations:
