--- a/charts/redirect/Chart.yaml
+++ b/charts/redirect/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v2
 name: redirect
 description: Redirect Delpoyment
 home: https://github.com/wyrihaximusnet/docker-redirect
+icon: https://avatars0.githubusercontent.com/u/19738034?s=200&v=4
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,7 +16,7 @@ type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 0.1.0
+version: 0.1.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
