--- a/.github/workflows/helm-charts-test.yaml
+++ b/.github/workflows/helm-charts-test.yaml
@@ -3,7 +3,7 @@ name: "helm-charts/test"
 on: pull_request
 
 jobs:
-  lint-test:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -12,20 +12,30 @@ jobs:
       - name: Fetch history
         run: git fetch --prune --unshallow
 
-      - name: Run chart-testing (lint)
+      - name: Lint charts
         id: lint
         uses: helm/chart-testing-action@v1.0.0-rc.1
         with:
           command: lint
+
+
+  test:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Fetch history
+        run: git fetch --prune --unshallow
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.0.0-alpha.3
         with:
           installLocalPathProvisioner: true
         # Only build a kind cluster if there are chart changes to test.
-        if: steps.lint.outputs.changed == 'true'
 
-      - name: Run chart-testing (install)
+      - name: Test charts
         uses: helm/chart-testing-action@v1.0.0-rc.1
         with:
           command: install
