--- a/charts/docker-hub-exporter/templates/service.yaml
+++ b/charts/docker-hub-exporter/templates/service.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+    - port: 9170
+      targetPort: 9170
       protocol: TCP
       name: metrics
   selector:
