--- a/charts/docker-hub-exporter/templates/service.yaml
+++ b/charts/docker-hub-exporter/templates/service.yaml
@@ -8,7 +8,7 @@ spec:
   type: ClusterIP
   ports:
     - port: 9170
-      targetPort: 9170
+      targetPort: metrics
       protocol: TCP
       name: metrics
   selector:
