--- a/charts/docker-hub-exporter/templates/deployment.yaml
+++ b/charts/docker-hub-exporter/templates/deployment.yaml
@@ -39,6 +39,8 @@ spec:
             httpGet:
               path: /
               port: metrics
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
           args:
             - -listen-address=:9170
             - -organisations={{ .Values.organisations }}
