Loosen up docker-hub-exporter probes
This is not a mission critical service and can be unavailable once in a while as the metrics it provibes aren't needed to be minute to minute accurate

--- a/charts/docker-hub-exporter/templates/deployment.yaml
+++ b/charts/docker-hub-exporter/templates/deployment.yaml
@@ -30,10 +30,16 @@ spec:
               containerPort: 9170
               protocol: TCP
           livenessProbe:
+            failureThreshold: 9
+            periodSeconds: 20
+            initialDelaySeconds: 20
             httpGet:
               path: /
               port: metrics
           readinessProbe:
+            failureThreshold: 9
+            periodSeconds: 20
+            initialDelaySeconds: 20
             httpGet:
               path: /
               port: metrics
