--- a/charts/docker-hub-exporter/templates/deployment.yaml
+++ b/charts/docker-hub-exporter/templates/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
     release: {{ include ".helm.fullname" . }}
     {{- include ".helm.labels" . | nindent 4 }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
       {{- include ".helm.selectorLabels" . | nindent 6 }}
