Enforce each pod to be on a different node

--- a/charts/docker-hub-exporter/templates/deployment.yaml
+++ b/charts/docker-hub-exporter/templates/deployment.yaml
@@ -54,3 +54,13 @@ spec:
           args:
             - -listen-address=:9170
             - -organisations={{ .Values.organisations }}
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - {{ include ".helm.fullname" . }}
+            topologyKey: "kubernetes.io/hostname"
