--- a/charts/redirect/templates/pod-disruption-budget.yaml
+++ b/charts/redirect/templates/pod-disruption-budget.yaml
@@ -1,4 +1,4 @@
-{{- if gt (.Values.replicaCount | int) 1 -}}
+{{- if gt (.Values.replicas | int) 1 -}}
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
