Port name + helm revision based podAntiAffinity to redirect and docker-hub-exporter
ALso sneaked in a new logo for Redirect

--- a/charts/docker-hub-exporter/Chart.yaml
+++ b/charts/docker-hub-exporter/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
 name: docker-hub-exporter
-description: Docker Hub exporter
+description: Docker Hub Exporter
 home: https://github.com/jessestuart/docker-hub-exporter
 icon: https://helm.wyrihaximus.net/images/charts/docker-hub-exporter.png
 type: application
-version: 0.4.0
+version: 0.5.0
 appVersion: d05df48
 maintainers:
   - name: WyriHaximus
