--- a/charts/redirect/Chart.yaml
+++ b/charts/redirect/Chart.yaml
@@ -1,27 +1,11 @@
 apiVersion: v2
 name: redirect
-description: Redirect Delpoyment
+description: Redirect
 home: https://github.com/wyrihaximusnet/docker-redirect
-icon: https://avatars0.githubusercontent.com/u/19738034?s=200&v=4
-
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
+icon: https://helm.wyrihaximus.net/images/charts/redirect.png
 type: application
-
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-version: 0.4.1
-
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application.
+version: 0.5.0
 appVersion: random
-
 maintainers:
   - name: WyriHaximus
     email: helm@wyrihaximus.net
