--- a/.github/workflows/helm-charts-test.yaml
+++ b/.github/workflows/helm-charts-test.yaml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Lint charts
         id: lint
-        uses: helm/chart-testing-action@v1.0.0-rc.1
+        uses: helm/chart-testing-action@v1.0.0
         with:
           command: lint
 
@@ -36,6 +36,6 @@ jobs:
         # Only build a kind cluster if there are chart changes to test.
 
       - name: Test charts
-        uses: helm/chart-testing-action@v1.0.0-rc.1
+        uses: helm/chart-testing-action@v1.0.0
         with:
           command: install
