--- a/charts/docker-hub-exporter/templates/grafana-dashboard-docker-hub-prometheus.yaml
+++ b/charts/docker-hub-exporter/templates/grafana-dashboard-docker-hub-prometheus.yaml
@@ -81,7 +81,7 @@ data:
           "hide": false,
           "instant": false,
           "interval": "",
-          "legendFormat": "{{image}} ({{user}})",
+          "legendFormat": "{{"{{image}} ({{user}})"}}",
           "refId": "A"
         }
         ],
@@ -288,7 +288,7 @@ data:
         {
           "expr": "sum(docker_hub_image_stars_gauge{user=~\"$user\"}) by (image, user)",
           "interval": "",
-          "legendFormat": "{{image}} ({{user}})",
+          "legendFormat": "{{"{{image}} ({{user}})"}}",
           "refId": "A"
         }
         ],
