[default-backend] Add HPA

--- a/charts/default-backend/values.yaml
+++ b/charts/default-backend/values.yaml
@@ -14,6 +14,10 @@ replicas: 2
 cron:
   replaceOldestPodHourly: false
 
+hpa:
+  enable: false
+  maxReplicas: 1024
+
 resources:
   limits:
     cpu: 75m
