--- a/.github/workflows/helm-charts-test.yaml
+++ b/.github/workflows/helm-charts-test.yaml
@@ -39,7 +39,9 @@ jobs:
       - name: Prepare library charts
         run: |
           cp charts/cron-jobs/library-ci/*.yaml charts/cron-jobs/templates/
+          cp charts/horizontal-pod-autoscalers/library-ci/*.yaml charts/horizontal-pod-autoscalers/templates/
           sed -i 's/library/application/g' charts/cron-jobs/Chart.yaml
+          sed -i 's/library/application/g' charts/horizontal-pod-autoscalers/Chart.yaml
 
       - name: Test charts
         uses: helm/chart-testing-action@v1.0.0
