--- a/charts/redirect/Chart.yaml
+++ b/charts/redirect/Chart.yaml
@@ -4,8 +4,12 @@ description: Redirect
 home: https://github.com/wyrihaximusnet/docker-redirect
 icon: https://helm.wyrihaximus.net/images/charts/redirect.png
 type: application
-version: 0.6.0
+version: 0.6.1
 appVersion: random
 maintainers:
   - name: WyriHaximus
     email: helm@wyrihaximus.net
+dependencies:
+  - name: horizontal-pod-autoscalers
+    version: ^0.1
+    repository: https://helm.wyrihaximus.net/
