--- a/charts/default-backend/Chart.yaml
+++ b/charts/default-backend/Chart.yaml
@@ -4,12 +4,15 @@ description: A Helm chart for Kubernetes
 home: https://github.com/wyrihaximusnet/docker-default-backend
 icon: https://helm.wyrihaximus.net/images/charts/default-backend.png
 type: application
-version: 0.3.0
+version: 0.3.1
 appVersion: random
 maintainers:
   - name: WyriHaximus
     email: helm@wyrihaximus.net
 dependencies:
   - name: cron-jobs
+    version: ^0.1
+    repository: https://helm.wyrihaximus.net/
+  - name: horizontal-pod-autoscalers
     version: ^0.1
     repository: https://helm.wyrihaximus.net/
