[horizontal-pod-autoscalers] Add controlled scale down
Overwrites the default behavior of scaling down quickly,
it slowly scales down one pod a minute. Making a possible
scale up less dramatic when it's still scaling down.

Bumped helm/kinda-action in the process.

--- a/charts/horizontal-pod-autoscalers/templates/_hpa.yaml
+++ b/charts/horizontal-pod-autoscalers/templates/_hpa.yaml
@@ -11,6 +11,12 @@ spec:
     name: {{ .name }}
   minReplicas: {{ .replicas.min | default 2 }}
   maxReplicas: {{ .replicas.max | default 1024 }}
+  behavior:
+    scaleDown:
+      policies:
+        - type: Pods
+          value: 1
+          periodSeconds: 60
   metrics:
     - type: Resource
       resource:
