--- a/charts/redirect/templates/config.yaml
+++ b/charts/redirect/templates/config.yaml
@@ -7,6 +7,7 @@ metadata:
 data:
   config.yaml: |
     defaultFallbackTarget: {{ .Values.redirect.defaultFallbackTarget }}
+    enforceHttps: {{ .Values.redirect.enforceHttps }}
     buildin:
       wwwToNonWww: {{ if eq .Values.redirect.buildin "wwwToNonWww" -}}true{{- else -}}false{{- end }}
       nonWwwToWww: {{ if eq .Values.redirect.buildin "nonWwwToWww" -}}true{{- else -}}false{{- end }}
